ms-catalog-zecore/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ms-catalog-zecore
  namespace: client
spec:
  rules:
    - host: ms-catalog-zecore-production.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: ms-catalog-zecore
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
